--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@ html{
   
   .body{
     font-family: "lato", sans-serif;
+    background-image: url("../images/Money.jpg");
+    background-repeat: no-repeat;
     max-width: 700px;
     margin: 30px auto;
-    background-color: silver;
+  
   }
   
