--- a/css/form.css
+++ b/css/form.css
@@ -1,6 +1,7 @@
 .form__fieldset{
     border:3px solid #222;
     border-radius: 10px;
+    background-color: white;
     padding: 20px;
     margin: auto;
   }
